--- a/.gitignore
+++ b/.gitignore
@@ -1,207 +1,198 @@
-# Byte-compiled / optimized / DLL files
+############################################################
+#                     PYTHON (Backend)
+############################################################
+
 __pycache__/
-*.py[codz]
+*.py[cod]
 *$py.class
 
-# C extensions
-*.so
+# Environments
+.venv/
+venv/
+env/
+env.bak/
+venv.bak/
+**/.venv/
+**/venv/
+**/env/
 
-# Distribution / packaging
-.Python
+# Python env files
+.env
+.env.*
+**/.env
+**/.env.*
+
+# Packaging / builds
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
+develop-eggs/
 .eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
 *.egg-info/
-.installed.cfg
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py.cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
-#   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
-#pdm.lock
-#pdm.toml
-.pdm-python
-.pdm-build/
-
-# pixi
-#   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
-#pixi.lock
-#   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
-#   in the .venv directory. It is recommended not to include this directory in version control.
-.pixi
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
+# Python caches
 .mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
+.pytest_cache/
 .pyre/
-
-# pytype static type analyzer
 .pytype/
-
-# Cython debug symbols
+.dmypy.json
+ruff_cache/
+__pypackages__/
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# Django / FastAPI assets
+**/db.sqlite3*
+**/media/
+**/static/
+**/staticfiles/
+**/logs/
+**/temp/
 
-# Abstra
-# Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
-# Learn more at https://abstra.io/docs
-.abstra/
+############################################################
+#             NODE / JAVASCRIPT / TYPESCRIPT
+############################################################
 
-# Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+# pnpm
+pnpm-debug.log*
+**/pnpm-debug.log*
+.pnpm-store/
+**/.pnpm-store/
 
-# Ruff stuff:
-.ruff_cache/
+# pnpm state
+node_modules/
+**/node_modules/
 
-# PyPI configuration file
-.pypirc
+# Optional: ignore pnpm-lock if your team prefers recreating environments
+# pnpm-lock.yaml
+# **/pnpm-lock.yaml
 
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
+# Build outputs
+dist/
+build/
+.cache/
+.next/
+.nuxt/
+out/
+storybook-static/
 
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
+**/dist/
+**/build/
+**/.cache/
+**/.next/
+**/.nuxt/
+**/out/
+
+# Env files
+**/.env.local
+**/.env.development.local
+**/.env.production.local
+**/.env.test.local
+
+# Tooling caches
+.eslintcache
+stylelintcache
+**/.eslintcache
+**/stylelintcache
+
+# TypeScript
+*.tsbuildinfo
+**/*.tsbuildinfo
+
+# Vite / Turbo / Vercel / Webpack
+.vite/
+.turbo/
+.vercel/
+**/.vite/
+**/.turbo/
+**/.vercel/
+
+############################################################
+#                         DOCKER
+############################################################
+
+.docker/
+docker/
+docker-compose.override.yml
+docker-compose.local.yml
+docker.pid
+
+# Volumes
+data/
+volumes/
+tmp/
+tmp/**
+
+############################################################
+#                 WEBSTORM / JETBRAINS IDE
+############################################################
+
+.idea/
+*.iml
+
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/dictionaries
+.idea/**/shelf/
+.idea/**/usage.statistics.xml
+.idea/httpRequests/
+.idea/sonarlint/
+.idea/markdown-navigator/
+
+############################################################
+#                 VISUAL STUDIO CODE (optional)
+############################################################
+
+.vscode/
+*.code-workspace
+
+############################################################
+#                        OS FILES
+############################################################
+
+.DS_Store
+Thumbs.db
+desktop.ini
+
+############################################################
+#                         GENERAL
+############################################################
+
+# Logs
+*.log
+logs/
+**/logs/
+
+# Temp files
+*.tmp
+*.swp
+*.swo
+*~
+
+# Backup files
+*.bak
+*.old
+
+# Secrets (catch-all)
+secrets/
+secret/
+**/secrets/
+**/secret/
+
+############################################################
+#                    COMMON MONOREPO FOLDERS
+############################################################
+
+# Environments anywhere
+**/.venv/
+**/venv/
+**/env/
+
+# Build artifacts anywhere
+**/build/
+**/dist/
+**/.cache/
+
+# Coverage
+coverage/
+**/coverage/
